--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,20 @@ body {
   align-items: center;
 }
 
-h1 {
-  font-size: var(--fs-3);
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  flex-grow: 1;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  flex-grow: 1;
+  color: black;
 }
