--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,16 @@ html {
 }
 
 :root {
-  --fs-1: 1.4rem;
-  --fs-2: 2.8rem;
+  /* startBtn */
+  --fs-1: 35rem;
+  --fs-2: 5rem;
   --fs-3: 3.4rem;
 }
 
 @media (max-width: 48rem) {
   :root {
-    --fs-1: 1rem;
-    --fs-2: 2.2rem;
+    --fs-1: 15rem;
+    --fs-2: 2rem;
     --fs-3: 3rem;
   }
 }
@@ -38,6 +39,15 @@ header {
   align-items: center;
   width: 100%;
   flex-grow: 1;
+  transition: 1s;
+  background-image: linear-gradient(
+    135deg,
+    rgb(121, 0, 0),
+    rgb(121, 0, 0),
+    rgb(255, 57, 57),
+    rgb(121, 0, 0)
+  );
+  border-bottom: solid black var(--fs-2);
 }
 
 footer {
@@ -46,5 +56,24 @@ footer {
   align-items: flex-end;
   width: 100%;
   flex-grow: 1;
+  transition: 1s;
+  background-image: linear-gradient(
+    135deg,
+    rgb(151, 151, 151),
+    white,
+    silver,
+    silver
+  );
   color: black;
+  border-top: solid black var(--fs-2);
+}
+
+.startBtn {
+  z-index: 1;
+  position: absolute;
+  height: var(--fs-1);
+  width: var(--fs-1);
+  border-radius: 100%;
+  border: solid black var(--fs-2);
+  margin-bottom: -10rem;
 }
