--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ html {
   /* card */
   --fs-4: 95vw;
   --fs-5: 135vw;
+  --fs-6: 1.2rem;
 }
 
 @media (min-width: 60rem) {
@@ -92,6 +93,14 @@ footer {
     background-color: black;
     color: magenta;
   }
+}
+
+h4 {
+  font-size: var(--fs-6);
+}
+
+.hide {
+  display: none;
 }
 
 .pokeballBottom {
@@ -236,4 +245,15 @@ footer {
   margin: 18% 5% 70% 5%;
   border: dashed black 0.3rem;
   background-color: gold;
+}
+
+.detailRibbon {
+  width: 80%;
+  color: black;
+  background-image: linear-gradient(90deg, gold, rgb(255, 255, 50), gold);
+  margin-top: 1rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 10%;
 }
