--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,14 @@ html {
 }
 
 :root {
+  /* fonts */
+  --fs-01: 3rem;
+  --fs-010: 3.4rem;
+  --fs-02: 2rem;
+  --fs-03: 1.4rem;
+
   /* startBtn */
   --fs-1: 15rem;
-  --fs-2: 2rem;
   --fs-3: -9.5rem;
 
   /* card */
@@ -58,7 +63,7 @@ header {
     rgb(255, 57, 57),
     rgb(121, 0, 0)
   );
-  border-bottom: solid black var(--fs-2);
+  border-bottom: solid black var(--fs-02);
 }
 
 footer {
@@ -77,7 +82,7 @@ footer {
     silver
   );
   color: black;
-  border-top: solid black var(--fs-2);
+  border-top: solid black var(--fs-02);
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
@@ -95,8 +100,20 @@ footer {
   }
 }
 
+h1 {
+  font-size: var(--fs-01);
+  line-height: var(--fs-010);
+  margin: 0;
+  padding-bottom: 0;
+  height: fit-content;
+}
+
 h4 {
   font-size: var(--fs-6);
+}
+
+p {
+  margin: 0 1rem;
 }
 
 .hide {
@@ -119,7 +136,7 @@ h4 {
   height: var(--fs-1);
   width: var(--fs-1);
   border-radius: 100%;
-  border: solid black var(--fs-2);
+  border: solid black var(--fs-02);
   margin-bottom: var(--fs-3);
 }
 
@@ -165,16 +182,6 @@ h4 {
   }
 }
 
-.card {
-  color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: solid gold 1rem;
-  border-radius: 2.7%;
-  background-image: linear-gradient(135deg, black, teal, purple);
-}
-
 .cardfaceEmpty {
   animation: growFace 1s 1s 1 forwards;
   border: dashed 1rem grey;
@@ -190,6 +197,96 @@ h4 {
     height: 57vw;
     margin-top: 2rem;
   }
+}
+
+.card {
+  color: black;
+  display: flex;
+  width: var(--fs-4);
+  height: var(--fs-5);
+  flex-direction: column;
+  align-items: center;
+  border: solid gold 1rem;
+  border-radius: 2.7%;
+  background-image: linear-gradient(135deg, silver, teal, purple);
+}
+
+.cardface {
+  display: flex;
+  width: 80vw;
+  height: 52vw;
+  justify-content: center;
+  align-items: center;
+  border: 0.7rem solid;
+  border-color: rgb(181, 157, 0) rgb(255, 217, 1) rgb(205, 196, 27)
+    rgb(220, 199, 11);
+}
+
+.title {
+  display: none;
+  width: 80vw;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.detailRibbon {
+  display: none;
+  width: 80%;
+  color: black;
+  background-image: linear-gradient(90deg, gold, rgb(255, 255, 50), gold);
+  margin-top: 1rem;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 10%;
+}
+
+.moveNode {
+  display: none;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: solid black 0.2rem;
+  font-size: var(--fs-02);
+  width: 92%;
+}
+
+.cardFooter {
+  display: none;
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  font-size: var(--fs-03);
+  width: 85vw;
+}
+
+.ability {
+  flex-grow: 3;
+  align-items: center;
+}
+
+.infoBox {
+  display: none;
+  flex-grow: 2;
+  justify-content: flex-end;
+  align-items: center;
+  width: 95%;
+  border: 0.3rem solid;
+  border-color: rgb(155, 155, 0) rgb(227, 227, 0) rgb(205, 196, 27)
+    rgb(217, 220, 11);
+}
+
+.cardBottom {
+  display: none;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
+
+.cornerIcon {
+  position: absolute;
+  z-index: 1;
+  margin-left: 36rem;
 }
 
 .options {
@@ -245,15 +342,4 @@ h4 {
   margin: 18% 5% 70% 5%;
   border: dashed black 0.3rem;
   background-color: gold;
-}
-
-.detailRibbon {
-  width: 80%;
-  color: black;
-  background-image: linear-gradient(90deg, gold, rgb(255, 255, 50), gold);
-  margin-top: 1rem;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding-right: 10%;
 }
