--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -293,7 +293,7 @@ img {
 .infoBox {
   display: none;
   flex-grow: 2;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   width: 95%;
   border: 0.3rem solid;
