--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,9 +261,8 @@ img {
   color: black;
   background-image: linear-gradient(90deg, gold, rgb(255, 255, 50), gold);
   margin-top: 1rem;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  padding-right: 10%;
 }
 
 .moveNode {
@@ -288,6 +287,7 @@ img {
 .ability {
   flex-grow: 3;
   align-items: center;
+  padding-top: 1rem;
 }
 
 .infoBox {
