--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,13 +234,21 @@ img {
 
 .cardface {
   display: flex;
+  justify-content: center;
   width: 80vw;
   height: 52vw;
-  justify-content: center;
   align-items: center;
   border: 0.7rem solid;
   border-color: rgb(181, 157, 0) rgb(255, 217, 1) rgb(205, 196, 27)
     rgb(220, 199, 11);
+  box-shadow: 1rem 1rem 2rem 0 black;
+  /* background-image: conic-gradient(
+    from 90deg at 0% 70%,
+    rgb(0, 90, 0),
+    rgb(80, 22, 22),
+    black,
+    rgb(0, 255, 60)
+  ); */
 }
 
 .title {
